# vibin-tom-antreas-evo

./: .cursorrules  .gitignore  README.md  install-conda-python-deps.sh  pyproject.toml  run_evolution_based.py  run_gradient_based.py
docs/: README.md  dataset_preparation.md  evolutionary_strategies.md  model_architecture.md  project_setup.md  training_process.md
papers/: howuhh_es_openai.md  openai_es_starter.md  salimans_et_al_2017_es.md
scripts/: extract_pdf_text.py  generate_docs_site.py  ingest_github_repo.py  install-conda-python-deps.sh  refresh_content.py  update_entry_dates.py
tinkering/: __init__.py  datasets.py  evolution.py  evolution_optimizer.py  models.py  train.py
